// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render an header 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex flex-col items-start"
    >
      <h1
        class="text-3xl font-bold md:text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex flex-col items-start"
    >
      <h1
        class="text-3xl font-bold md:text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
      <div
        class="mt-2 text-theme-neutral-dark"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex flex-col items-start"
    >
      <h1
        class="text-3xl font-bold md:text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
      <div
        class="mt-2 text-theme-neutral-dark"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="sc-AxjAm ddQVWI"
        color="primary"
        data-testid="header__extra"
        type="button"
      >
        Extra 1
      </button>
      <button
        class="sc-AxjAm ddQVWI"
        color="primary"
        data-testid="header__extra"
        type="button"
      >
        Extra 2
      </button>
    </div>
  </div>
</DocumentFragment>
`;
